[package]

name = "3d_vol_balls"
version = "0.0.1"
authors = [ "Michael Riss <Michael.Riss@gmail.com>" ]

[[bin]]

name = "3d_vol_balls"

[dependencies]
opencl = { git = "https://github.com/MichaelRiss/rust-opencl.git", branch = "extended_deviceinfo" }
image = "*"
rand = "*"
num_cpus = "*"
memmap = "*"
time = "*"
gtk = "*"
